--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,9 @@ services:
     image: mongo:4.4
     ports:
     - 27017:27017
+    volumes:
+    - mongo_data:/data/db
+    - mongo_conf:/data/configdb
+volumes:
+  mongo_data:
+  mongo_conf:
