--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "babel src -d dist",
-    "start": "npm run build && node dist/bin/www.js",
-    "serve": "npm run build && nodemon dist/bin/www.js"
+    "serve": "nodemon",
+    "start": "npm run build && node dist/bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
